fix cucumber link

--- a/src/content/docs/current/Reference/Buffers/custom_textures.mdx
+++ b/src/content/docs/current/Reference/Buffers/custom_textures.mdx
@@ -99,4 +99,4 @@ Hardware bilinear filtering and wrapping/clamping behavior can be controlled wit
 
 By default, image files will use nearest neighbor and wrapping, and raw textures will use bilinear filtering and clamping. Shader provided mcmeta files cannot be used for resource pack / atlas textures.
 
-<img src="/src/assets/cucumber.png" width="1" height="1" />
+<img src="/cucumber.png" width="1" height="1" />
